<resources>
    <string name="app_name">Good Husband</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reserve">Reserve</string>

    <string name="group_notification_for">This is the %s notification group.</string>
    <string name="create_reminder">Create A Reminder</string>
    <string name="reminder_name">Reminder name</string>
    <string name="birthday">Birthday</string>
    <string name="anniversary">Anniversary</string>
    <string name="date_night">Date Night</string>
    <string name="random">Random</string>
    <string name="menu_item_reminder">Add Reminder</string>
    <string name="menu_item_act">Add Act</string>
    <string name="menu_item_favorite">Add Favorite</string>
</resources>